@@ -2,6 +2,7 @@
 - Mask signals from deadman's switch
 - Reinstate strong umask before writing report
 - Use pw_gid to set the group when changing gid
+- Allow the use of account names for auid & uid in rules
 
 0.8.3
 - Add audit support for the linux-4.15 kernel
